Working Notebooks -- video not working for notebooks 5+

--- a/notebooks/notebook-1.ipynb
+++ b/notebooks/notebook-1.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Bayesian Networks"
    ]
@@ -11,7 +14,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -19,9 +24,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "appliedrl",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "appliedrl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -33,7 +38,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
