--- a/notebooks/notebook-3.ipynb
+++ b/notebooks/notebook-3.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Planning Algorithms"
    ]
@@ -11,19 +14,29 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pprint\n",
     "import json\n",
-    "import sys"
+    "import sys\n",
+    "import gym\n",
+    "\n",
+    "from gym import wrappers\n",
+    "from subprocess import check_output\n",
+    "from IPython.display import HTML"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Policy Evaluation"
    ]
@@ -32,7 +45,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -63,7 +78,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Policy Improvement"
    ]
@@ -72,7 +90,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -112,7 +132,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Policy Iteration"
    ]
@@ -121,14 +144,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Value Iteration"
    ]
@@ -137,133 +165,129 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:55:52,983] Making new env: Taxi-v2\n",
-      "[2017-03-20 16:55:52,992] Clearing 20 monitor files from previous run (because force=True was provided)\n",
-      "[2017-03-20 16:55:52,993] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000000.json\n",
-      "[2017-03-20 16:55:53,065] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000001.json\n",
-      "[2017-03-20 16:55:53,538] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000008.json\n",
-      "[2017-03-20 16:55:54,832] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000027.json\n"
+      "[2017-03-24 15:06:57,642] Making new env: Taxi-v2\n",
+      "[2017-03-24 15:06:57,654] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000000.json\n",
+      "[2017-03-24 15:06:57,721] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000001.json\n",
+      "[2017-03-24 15:06:58,172] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000008.json\n",
+      "[2017-03-24 15:06:59,388] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000027.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.372549019607844\n"
+      "8.137254901960784\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:55:57,342] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000064.json\n"
+      "[2017-03-24 15:07:01,761] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000064.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.673267326732674\n"
+      "8.178217821782178\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:56:01,468] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000125.json\n"
+      "[2017-03-24 15:07:05,637] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000125.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.62251655629139\n",
-      "8.512437810945274\n"
+      "8.33774834437086\n",
+      "8.482587064676617\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:56:07,602] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000216.json\n"
+      "[2017-03-24 15:07:11,447] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000216.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.565737051792828\n",
-      "8.571428571428571\n"
+      "8.541832669322709\n",
+      "8.445182724252492\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:56:16,187] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000343.json\n"
+      "[2017-03-24 15:07:19,535] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000343.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.52991452991453\n",
-      "8.481296758104738\n",
-      "8.467849223946786\n",
-      "8.463073852295409\n"
+      "8.450142450142451\n",
+      "8.528678304239401\n",
+      "8.494456762749445\n",
+      "8.479041916167665\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:56:27,595] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000512.json\n"
+      "[2017-03-24 15:07:30,283] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000512.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.450090744101633\n",
-      "8.43926788685524\n",
-      "8.428571428571429\n",
-      "8.455064194008559\n"
+      "8.491833030852995\n",
+      "8.464226289517471\n",
+      "8.448540706605224\n",
+      "8.419400855920115\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:56:42,185] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video000729.json\n"
+      "[2017-03-24 15:07:44,114] Starting new video recorder writing to /tmp/openaigym.video.0.36.video000729.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.474034620505993\n",
-      "8.460674157303371\n",
-      "8.474735605170387\n",
-      "8.452830188679245\n",
-      "8.43217665615142\n",
+      "8.427430093209054\n",
+      "8.406991260923846\n",
+      "8.421856639247943\n",
+      "8.426193118756936\n",
+      "8.436382754994742\n",
       "v states\n",
       "q values\n"
      ]
     }
    ],
    "source": [
-    "import gym\n",
-    "import numpy as np\n",
-    "\n",
-    "from gym import wrappers\n",
-    "\n",
     "def iterate_value_function(v_inp, q_inp, gamma, env):\n",
     "    \n",
     "    nstates = env.env.observation_space.n\n",
@@ -347,14 +371,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-20 16:57:00,439] Starting new video recorder writing to /tmp/openaigym.video.0.5991.video001000.json\n"
+      "[2017-03-24 15:09:25,380] Starting new video recorder writing to /tmp/openaigym.video.0.36.video001000.json\n"
      ]
     }
    ],
@@ -372,47 +398,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tmp/openaigym.video.0.36.video001000.json'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "env.videos[-1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "from subprocess import check_output\n",
-    "\n",
     "out = check_output([\"asciinema\", \"upload\", env.videos[-1][0]])\n",
     "out = out.decode(\"utf-8\").replace('\\n', '').replace('\\r', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://asciinema.org/a/elglsxzuwzhbmtzhbcjk9nc9a\n"
+     ]
+    }
+   ],
    "source": [
     "print(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'elglsxzuwzhbmtzhbcjk9nc9a'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "castid = out.split('/')[-1]\n",
     "castid"
@@ -420,14 +482,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script type=\"text/javascript\" \n",
+       "    src=\"https://asciinema.org/a/elglsxzuwzhbmtzhbcjk9nc9a.js\" \n",
+       "    id=\"asciicast-elglsxzuwzhbmtzhbcjk9nc9a\" \n",
+       "    async data-autoplay=\"true\" data-size=\"big\">\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from IPython.display import HTML\n",
-    "\n",
     "html_tag = \"\"\"\n",
     "<script type=\"text/javascript\" \n",
     "    src=\"https://asciinema.org/a/{0}.js\" \n",
@@ -438,13 +519,22 @@
     "html_tag = html_tag.format(castid)\n",
     "HTML(data=html_tag)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "appliedrl",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "appliedrl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -456,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
