--- a/notebooks/notebook-4.ipynb
+++ b/notebooks/notebook-4.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "* Apply TD(Lambda)\n",
     "* Apply Q-Learning\n",
@@ -12,11 +15,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-03-24 15:12:14,820] Making new env: Taxi-v2\n",
+      "[2017-03-24 15:12:15,647] Finished writing results. You can upload them to the scoreboard via gym.upload('/tmp/taxi-v2')\n",
+      "[2017-03-24 15:12:15,648] Clearing 22 monitor files from previous run (because force=True was provided)\n",
+      "[2017-03-24 15:12:15,650] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000000.json\n",
+      "[2017-03-24 15:12:15,667] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000001.json\n",
+      "[2017-03-24 15:12:15,702] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000008.json\n",
+      "[2017-03-24 15:12:15,789] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000027.json\n",
+      "[2017-03-24 15:12:15,938] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000064.json\n",
+      "[2017-03-24 15:12:16,072] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000125.json\n",
+      "[2017-03-24 15:12:16,179] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000216.json\n",
+      "[2017-03-24 15:12:16,267] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000343.json\n",
+      "[2017-03-24 15:12:16,371] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000512.json\n",
+      "[2017-03-24 15:12:16,536] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000729.json\n",
+      "[2017-03-24 15:12:16,705] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video001000.json\n",
+      "[2017-03-24 15:12:17,351] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video002000.json\n",
+      "[2017-03-24 15:12:18,004] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video003000.json\n",
+      "[2017-03-24 15:12:18,657] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video004000.json\n",
+      "[2017-03-24 15:12:19,375] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video005000.json\n",
+      "[2017-03-24 15:12:19,983] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video006000.json\n",
+      "[2017-03-24 15:12:20,602] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video007000.json\n",
+      "[2017-03-24 15:12:21,188] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video008000.json\n",
+      "[2017-03-24 15:12:21,801] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video009000.json\n"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "import numpy as np\n",
@@ -35,7 +69,7 @@
     "def exploration(episode):\n",
     "    return 0.5 if episode < 10000 else 0.999\n",
     "\n",
-    "for episode in range(1000):\n",
+    "for episode in range(10000):\n",
     "    state = env.reset()\n",
     "\n",
     "    while True:\n",
@@ -55,20 +89,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tmp/taxi-v2/openaigym.video.1.54.video009000.json'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "env.videos[-1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -80,22 +129,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://asciinema.org/a/4j5gomj8esht8vx81sicn8sda\n"
+     ]
+    }
+   ],
    "source": [
     "print(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4j5gomj8esht8vx81sicn8sda'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "castid = out.split('/')[-1]\n",
     "castid"
@@ -103,11 +175,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script type=\"text/javascript\" \n",
+       "    src=\"https://asciinema.org/a/4j5gomj8esht8vx81sicn8sda.js\" \n",
+       "    id=\"asciicast-4j5gomj8esht8vx81sicn8sda\" \n",
+       "    async data-autoplay=\"true\" data-size=\"big\">\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import HTML\n",
     "\n",
@@ -126,7 +219,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -135,7 +230,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -144,7 +241,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -152,9 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "appliedrl",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "appliedrl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
