Working docker container. Added Instructions and Tips to the README

--- a/notebooks/notebook-4.ipynb
+++ b/notebooks/notebook-4.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -26,28 +26,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-03-24 15:12:14,820] Making new env: Taxi-v2\n",
-      "[2017-03-24 15:12:15,647] Finished writing results. You can upload them to the scoreboard via gym.upload('/tmp/taxi-v2')\n",
-      "[2017-03-24 15:12:15,648] Clearing 22 monitor files from previous run (because force=True was provided)\n",
-      "[2017-03-24 15:12:15,650] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000000.json\n",
-      "[2017-03-24 15:12:15,667] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000001.json\n",
-      "[2017-03-24 15:12:15,702] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000008.json\n",
-      "[2017-03-24 15:12:15,789] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000027.json\n",
-      "[2017-03-24 15:12:15,938] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000064.json\n",
-      "[2017-03-24 15:12:16,072] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000125.json\n",
-      "[2017-03-24 15:12:16,179] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000216.json\n",
-      "[2017-03-24 15:12:16,267] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000343.json\n",
-      "[2017-03-24 15:12:16,371] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000512.json\n",
-      "[2017-03-24 15:12:16,536] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video000729.json\n",
-      "[2017-03-24 15:12:16,705] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video001000.json\n",
-      "[2017-03-24 15:12:17,351] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video002000.json\n",
-      "[2017-03-24 15:12:18,004] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video003000.json\n",
-      "[2017-03-24 15:12:18,657] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video004000.json\n",
-      "[2017-03-24 15:12:19,375] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video005000.json\n",
-      "[2017-03-24 15:12:19,983] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video006000.json\n",
-      "[2017-03-24 15:12:20,602] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video007000.json\n",
-      "[2017-03-24 15:12:21,188] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video008000.json\n",
-      "[2017-03-24 15:12:21,801] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.1.54.video009000.json\n"
+      "[2017-03-27 20:11:56,316] Making new env: Taxi-v2\n",
+      "[2017-03-27 20:11:56,335] Creating monitor directory /tmp/taxi-v2\n",
+      "[2017-03-27 20:11:56,338] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000000.json\n",
+      "[2017-03-27 20:11:56,380] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000001.json\n",
+      "[2017-03-27 20:11:56,445] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000008.json\n",
+      "[2017-03-27 20:11:56,566] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000027.json\n",
+      "[2017-03-27 20:11:56,727] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000064.json\n",
+      "[2017-03-27 20:11:56,899] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000125.json\n",
+      "[2017-03-27 20:11:57,065] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000216.json\n",
+      "[2017-03-27 20:11:57,185] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000343.json\n",
+      "[2017-03-27 20:11:57,376] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000512.json\n",
+      "[2017-03-27 20:11:57,694] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video000729.json\n",
+      "[2017-03-27 20:11:57,922] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video001000.json\n",
+      "[2017-03-27 20:11:58,740] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video002000.json\n",
+      "[2017-03-27 20:11:59,519] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video003000.json\n",
+      "[2017-03-27 20:12:00,310] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video004000.json\n",
+      "[2017-03-27 20:12:01,069] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video005000.json\n",
+      "[2017-03-27 20:12:02,032] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video006000.json\n",
+      "[2017-03-27 20:12:03,192] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video007000.json\n",
+      "[2017-03-27 20:12:04,223] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video008000.json\n",
+      "[2017-03-27 20:12:05,125] Starting new video recorder writing to /tmp/taxi-v2/openaigym.video.0.31.video009000.json\n"
      ]
     }
    ],
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -99,10 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "'/tmp/taxi-v2/openaigym.video.1.54.video009000.json'"
+       "'/tmp/taxi-v2/openaigym.video.0.31.video009000.json'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
