Start all notebooks under current kernel

--- a/notebooks/notebook-5.ipynb
+++ b/notebooks/notebook-5.ipynb
@@ -1013,7 +1013,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
