--- a/notebooks/notebook-6.ipynb
+++ b/notebooks/notebook-6.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "* continous state and action\n",
     "\n",
@@ -13,7 +16,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -21,9 +26,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "appliedrl",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "appliedrl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -35,7 +40,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
